<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@id/ll_paint_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_background_cd" />

        <com.example.kidsdrawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF"
            />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_drawing_view_container">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            android:background="@color/skin"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_skin"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:background="@color/black"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_black"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:background="@color/red"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_red"
            tools:ignore="UsingOnClickInXml"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:background="@color/green"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_green"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            android:background="@color/blue"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_blue"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:background="@color/yellow"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_yellow"
            tools:ignore="UsingOnClickInXml"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            android:background="@color/lollipop"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_lollipop"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            android:background="@color/random"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_random"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            android:background="@color/white"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_white"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_paint_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/button_gallery_cd"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gallery"/>
        <ImageButton
            android:id="@+id/ib_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/button_undo_cd"
            android:scaleType="fitXY"
            android:src="@drawable/ic_undo"/>
        <ImageButton
            android:id="@+id/ib_redo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/button_redo_cd"
            android:scaleType="fitXY"
            android:src="@drawable/ic_redo"/>
        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/button_brush_cd"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush"/>
        <ImageButton
            android:id="@+id/ib_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/button_save_cd"
            android:scaleType="fitXY"
            android:src="@drawable/ic_save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>